# Edu3

./: pom.xml
src/main/java/org/example/: AttributedPoint.java  Bird.java  BrokenLine.java  Building.java  Cat.java  Chainable.java  City.java  Department.java  Employee.java  Figure.java  Fraction.java  Gun.java  Line.java  Main.java  Measurable.java  Meowable.java  Name.java  Person.java  Point.java  Square.java  Student.java  Time.java
src/main/java/org/example/entities/: Building.java  City.java  Department.java  Employee.java  Gun.java  Name.java  SmartCity.java  Student.java
src/main/java/org/example/entrypoints/: Main.java  Test1.java
src/main/java/org/example/generics/: Comparable.java  Holder.java  MyOptional.java  Starter.java  Util.java
src/main/java/org/example/geometry/: AttributedPoint.java  BrokenLine.java  Chainable.java  Circle.java  Figure.java  GeometryGroup.java  Line.java  LoopedBrokenLine.java  Measurable.java  Moveable.java  Point.java  Point3D.java  Rectangle.java  Squar.java  Square.java  Triangle.java
src/main/java/org/example/living/: AValidate.java  Bird.java  Cat.java  Cuckoo.java  Meowable.java  Parrot.java  Person.java  Sparrow.java
src/main/java/org/example/main/: Main.java
src/main/java/org/example/other/: ChatJippity.java
src/main/java/org/example/other/jni/: CMakeLists.txt  TestLib.java  org_example_other_jni_TestLib.cpp  org_example_other_jni_TestLib.h
src/main/java/org/example/reflections/: B.java  Entity.java  (+7 more)
src/main/resources/: log4j2.properties
src/test/java/org/example/: Logged.java  LoggingExtension.java
(+150 files in other folders)
